# zbchat_server

ChatServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatGrpcImpl.cpp  ChatGrpcImpl.h  ChatGrpcServer.cpp  ChatGrpcServer.h  ChatServer.cpp  ChatServer.h  ChatSession.cpp  ChatSession.h  ConfigMgr.h  Defer.hpp  Error.h  LogicSystem.cpp  LogicSystem.h  LoginError.h  MySQLMgr.cpp  MySQLMgr.h  RedisMgr.cpp  RedisMgr.h  ResourceGrpcClient.cpp  ResourceGrpcClient.h  Singleton.hpp  StatusGrpcClient.cpp  StatusGrpcClient.h  UserMgr.cpp  UserMgr.h  global.cpp  global.h  main.cpp  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
ChatServer/message_format/: add_friend_apply.json  client_recv_add_friend_apply.json  get_friend_apply_source.json  login.json  search_user.json
GateServer/: CMakeLists.txt  Error.h  HttpConnection.cpp  HttpConnection.h  IOContextPool.cpp  IOContextPool.h  LogicSystem.cpp  LogicSystem.h  LoginError.h  MySQLMgr.cpp  MySQLMgr.h  RedisMgr.cpp  RedisMgr.h  Server.cpp  Server.h  Singleton.hpp  StatusGrpcClient.cpp  StatusGrpcClient.h  VarifyGrpcClient.cpp  VarifyGrpcClient.h  config.ini  main.cpp  make_grpc.sh  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
GateServer/message_config/: get_varifycode.json  modify_password.json  user_login.json  user_register.json
ResourceServer/: CMakeLists.txt  ConfigMgr.cpp  ErrorCode.h  ResourceServer.cpp  ResourceServer.h  ResourceServiceImpl.cpp  ResourceServiceImpl.h  Singleton.hpp  log.cpp  log.h  main.cpp  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
StatusServer/: CMakeLists.txt  ChatServerInfo.hpp  ConfigMgr.h  Error.h  Singleton.hpp  StatusServer.cpp  StatusServer.h  StatusServiceImpl.cpp  StatusServiceImpl.h  TransferKits.cpp  TransferKits.h  main.cpp  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
VerifyServer/: config.js  config.json  const.js  email.js  message.proto  package-lock.json  package.json  proto.js  redis.js  server.js
